fix: align subbmited message when syllables is on

--- a/src/scss/components/_initiatives.scss
+++ b/src/scss/components/_initiatives.scss
@@ -55,6 +55,11 @@
 		display: block;
 		padding: rem(12);
 	}
+
+	.fl-syllabification-separator {
+		display: inline;
+		padding: 0;
+	}
 }
 
 #comment-form {
